syntax = "proto3";
package Jde.App.Proto.FromServer;

import "google/protobuf/timestamp.proto";
import "Common.proto";
import "Web.FromServer.proto";
import "App.proto";

//////////////////////////////////////////////////////////////////////////////////////////////////////////

message LogLevels{
	Jde.Proto.ELogLevel server=1;
	Jde.Proto.ELogLevel client=2;
}

message ConnectionInfo{
	uint32 app_pk = 1;
	uint32 instance_pk = 2;
	LogLevels log_levels = 3;
	Jde.Web.FromServer.SessionInfo session_info = 4;
}


////////////Web/////////////////
message Trace{
	uint64 id=1;
	uint64 instance_id=2;
	google.protobuf.Timestamp time=3;
	Jde.Proto.ELogLevel level=4;
	uint32 message_id=5;
	uint32 file_id=6;
	uint32 function_id=7;
	uint32 line=8;
	uint32 user_pk=9;
	uint64 thread_id=10;
	repeated string args=11;
}

message Traces{
	uint32 app_id=1;
	repeated Trace values=2;
}

//message Application{
//	uint32 id=1;
//	string name=2;
//	Jde.Proto.ELogLevel db_level=3;
//	Jde.Proto.ELogLevel file_level=4;
//}

//message Applications{
//	repeated Application values=1;
//}

message Status{
	uint32 application_id=1;
	uint32 instance_id=2;
	string host_name=3;
	google.protobuf.Timestamp start_time=4;
	uint64 memory=5;
	uint32 log_count=6;
	double cpu=7;
	Jde.Proto.ELogLevel db_log_level=8;
	Jde.Proto.ELogLevel file_log_level=9;
	repeated string values=10;
}

message Strings{
	map<uint32,string> messages = 1;
	map<uint32,string> files = 2;
	map<uint32,string> functions = 3;
	map<uint32,string> threads = 4;
	map<uint32,string> userTargets = 5; //targets for web.
}
message SubscriptionAck{
	repeated uint32 server_ids = 1;
}

message Message{
	uint32 request_id=1;
	oneof Value{
		uint32 ack = 2;//sends on handshake
		string generic = 3;
		Jde.App.Proto.StringPKs string_pks = 4;//pks stored in db.
		LogLevels log_levels = 5;
		double progress = 7;
		Jde.Web.FromServer.SessionInfo session_info = 8;
		string graph_ql = 10;
		Jde.Proto.Exception exception = 11;
		Traces traces = 12;
//		Applications applications = 13;
		Status status = 14;
		Strings strings = 15;
		SubscriptionAck subscription_ack = 16;
		string subscription= 17;

		bytes execute_anonymous = 33;//appServer->2ndServer, no user context.
		Jde.App.Proto.Execute execute = 34;//execute with user context.
		bytes execute_response = 35;
	}
}

message Transmission{
	repeated Message messages = 1;
}